deployOnCluster/mrv-ingress.yaml
#
# COPYRIGHT Ericsson 2021
#
#
#
# The copyright to the computer program(s) herein is the property of
#
# Ericsson Inc. The programs may be used and/or copied only with written
#
# permission from Ericsson Inc. or in accordance with the terms and
#
# conditions stipulated in the agreement/contract under which the
#
# program(s) have been supplied.
#

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mrv-ingress
spec:
  rules:
  - host: mrv.ews.gic.ericsson.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eric-oss-ms-maturity-visualisation
            port:
              number: 8080
